Fixing gap in the bottom of the Local contact page (amp landing showing through)

--- a/covid-local-gatsby/src/styles/contact.module.scss
+++ b/covid-local-gatsby/src/styles/contact.module.scss
@@ -12,7 +12,8 @@
 
 .main {
   margin-top: 1rem;
-  margin-bottom: 5rem;
+  padding-bottom: 5rem;
+  min-height: 100vh;
 
   .formRow {
     display: flex;
